<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetalleContacto"
    android:padding="15sp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmarDatos"
        android:id="@+id/tvConfirmarDatos"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="35sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvNombreApellidos"
        android:layout_below="@id/tvConfirmarDatos"
        android:text="@string/nombreYApellidos"
        android:layout_marginTop="25sp"
        android:layout_marginStart="30sp"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvNombreApellidos"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:id="@+id/layoutFechaNacimiento">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fechaNacimiento"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFechaNacimientoConfirmar"
            android:text="@string/fechaIndefinida"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layoutFechaNacimiento"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:id="@+id/layoutTelefono">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numeroTelefono"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefonoConfirmar"
            android:text="@string/telefonoIndefinido"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layoutTelefono"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:id="@+id/layoutEmail">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmailConfirmar"
            android:text="@string/emailIndefinido"
            android:layout_marginStart="10sp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/layoutEmail"
        android:layout_marginTop="10sp"
        android:layout_marginStart="30sp"
        android:id="@+id/layoutDescripción">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/descripcionContacto"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDescripcion"
            android:text="@string/descripcionUsuario"
            android:textSize="20sp"/>
    </LinearLayout>

    <Button
        android:layout_below="@id/layoutDescripción"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditarDatos"
        android:text="@string/editarDatos"
        android:layout_centerHorizontal="true"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50sp"/>

</RelativeLayout>