<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombreCompleto"
        android:textColorHint="#000000"
        android:id="@+id/etNombreCompleto"
        android:inputType="text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvFechaNacimiento"
        android:layout_marginTop="10sp"
        android:textColor="#000000"
        android:gravity="start"
        android:text="@string/fechaNacimiento"
        android:layout_below="@id/etNombreCompleto"
        />
    <DatePicker

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@id/tvFechaNacimiento"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:hint="@string/numeroTelefono"
        android:id="@+id/etTelefono"
        android:textColorHint="#000000"
        android:layout_below="@id/datePicker"
        android:inputType="phone"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:hint="@string/email"
        android:id="@+id/etEmail"
        android:textColorHint="#000000"
        android:layout_below="@id/etTelefono"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:lines="3"
        android:hint="@string/descripcionContacto"
        android:id="@+id/etDescripcionContacto"
        android:textColorHint="#000000"
        android:layout_below="@id/etEmail"
        android:inputType="textMultiLine"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSiguiente"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/siguiente"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"/>
</RelativeLayout>